[gd_scene load_steps=10 format=2]

[ext_resource path="res://Art Packs/Space Shooter GUI/PNG/Upgrade/Close_BTN.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Art Packs/Space Shooter GUI/PNG/Buttons/BTNs_Active/Close_BTN.png" type="Texture" id=3]
[ext_resource path="res://Art Packs/Space Shooter GUI/PNG/Level_Menu/Window.png" type="Texture" id=4]
[ext_resource path="res://Menus/UI_ButtonClicked.mp3" type="AudioStream" id=5]
[ext_resource path="res://Levels/LevelSelect/UpgradeMenuFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Menus/Pause Menu/PauseFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Menus/Credits.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Display"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("WindowTexture:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Credits" type="Control"]
visible = false
margin_left = 10.0
margin_top = 37.0
margin_right = 1000.0
margin_bottom = 559.0
mouse_filter = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowTexture" type="TextureRect" parent="."]
margin_left = 21.2131
margin_top = 16.9706
margin_right = 965.213
margin_bottom = 496.971
rect_scale = Vector2( 1, 1e-05 )
rect_pivot_offset = Vector2( 0, 240 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CreditsNameLbl" type="Label" parent="WindowTexture"]
margin_left = 9.0
margin_top = 17.0
margin_right = 940.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 6 )
text = "Credits"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="WindowTexture"]
margin_left = 23.0
margin_top = 76.0
margin_right = 917.0
margin_bottom = 458.0
rect_min_size = Vector2( 800, 300 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WindowTexture/ScrollContainer"]
margin_right = 894.0
margin_bottom = 875.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Credits" type="Label" parent="WindowTexture/ScrollContainer/VBoxContainer"]
margin_right = 882.0
margin_bottom = 717.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.858824, 0.705882, 0.101961, 1 )
text = "Made by
Boris Fleysher

mostly as a solo project

Special thanks to
Isaac Cantine (Writing direction, player spaceship graphic)
Samuel Anderson (Lead playtesting)
The Games Den
Alberta Game Developers

Other assets sourced from:
Kenney.nl
Satur9
Master484
Code Inferno Games - codeinferno.com
Rawdanitsu
clayster2012
Adobe Source Sans Pro Regular font
Mixkit
Zapsplat.com
Cethiel
Retrocade Media
Open Game Art

Powered By
GODOT"
align = 1
autowrap = true

[node name="GodotIcon" type="TextureRect" parent="WindowTexture/ScrollContainer/VBoxContainer"]
margin_top = 721.0
margin_right = 882.0
margin_bottom = 785.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CloseButton" type="TextureButton" parent="WindowTexture"]
margin_left = 844.832
margin_top = 9.91571
margin_right = 892.832
margin_bottom = 57.9157
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseSFX" type="AudioStreamPlayer" parent="WindowTexture/CloseButton"]
stream = ExtResource( 5 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Display = SubResource( 1 )

[connection signal="visibility_changed" from="." to="." method="_on_Credits_visibility_changed"]
[connection signal="button_up" from="WindowTexture/CloseButton" to="." method="_on_CloseButton_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
